--- a/home.html
+++ b/home.html
@@ -11,6 +11,11 @@
             padding: 0;
         }
 
+        ::-webkit-scrollbar {
+            width: 0;
+            height: 0;
+        }
+
         body {
             width: 100vw;
             height: 100vh;
